--- a/api/package.json
+++ b/api/package.json
@@ -3,5 +3,9 @@
   "version": "1.0.0",
   "description": "Booking app",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@types/mongoose": "^5.11.97",
+    "mongoose": "^7.0.1"
+  }
 }
