--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,2 @@
-MONGODB_URL=mongodb+srv://BookMe:BookMe_2023@bookme.wgs3mms.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://BookMe:BookMe_2023@bookme.wgs3mms.mongodb.net/BookMe?retryWrites=true&w=majority
 JWT_SECRET=abcde
