--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
+    "formik": "^2.2.9",
     "mui-daterange-picker": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,7 +29,8 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
