--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "@types/passport": "^1.0.12",
+    "@types/passport-google-id-token": "^0.4.0",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.8",
     "axios": "^1.3.4",
@@ -23,6 +24,7 @@
     "mongoose": "^7.0.2",
     "nodemon": "^2.0.21",
     "passport": "^0.6.0",
+    "passport-google-id-token": "^0.4.7",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "ts-node": "^10.9.1",
