--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,10 @@
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
+    "fs": "^0.0.1-security",
     "mui-daterange-picker": "^1.0.5",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
@@ -30,6 +33,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "stream": "^0.0.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "yup": "^1.0.2"
