--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
+    "@types/node": "^18.15.11",
     "@types/passport": "^1.0.12",
     "@types/passport-google-id-token": "^0.4.0",
     "@types/passport-google-oauth20": "^2.0.11",
